--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Yo
+# FEATURES
+
+### Nuker
+- Fast account nuke
+- Fast server nuker
+
+### Token
+- Mass dm
+- Block/unfriend all friends
+- Group chat spammer
+- Dm deleter
+- Light/dark mode spammer
+- Login via token 
+- Delete/leave servers 
++ More
+
+### Other 
+- Qr code grabber
+- Token grabber 
+- Webhook spammmer/destroyer/protection
+- Get info from token
+- Mass report
